[gd_scene load_steps=3 format=3 uid="uid://cqfbtpfokd7hg"]

[ext_resource type="Script" uid="uid://brsbbeddcpffg" path="res://00_Game/Scripts/GameOverUI.gd" id="1_kf32h"]

[sub_resource type="LabelSettings" id="LabelSettings_a511i"]
font_size = 40

[node name="GameOverUI" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kf32h")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_right = 59.5
offset_bottom = 55.0
grow_horizontal = 2
text = "ZAFER"
label_settings = SubResource("LabelSettings_a511i")

[node name="RestartButton" type="Button" parent="TextureRect"]
self_modulate = Color(0.5019608, 0.5019608, 0.5019608, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -94.5
offset_top = -43.0
offset_right = 105.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Tekrar Dene"

[node name="MenuButton" type="Button" parent="TextureRect"]
self_modulate = Color(0.5019608, 0.5019608, 0.5019608, 1)
layout_mode = 0
offset_left = 105.0
offset_top = 321.0
offset_right = 305.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 25
text = "Ana Men√º"

[node name="ScoreLabel" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 183.0
offset_top = 189.0
offset_right = 223.0
offset_bottom = 212.0
